packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_spread_jsx.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2254
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';
import { useDocumentHead, useLocation } from '@khulnasoft.com/qwik-city';

/**
 * The RouterHead component is placed inside of the document `<head>` element.
 */
export const RouterHead = component$(() => {
  const head = useDocumentHead();
  const loc = useLocation();

  return (
    <>
      <title>{head.title}</title>

      <link rel="canonical" href={loc.href} />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />

      {head.meta.map((m) => (
        <meta {...m} />
      ))}

      {head.links.map((l) => (
        <link {...l} key={l.key} />
      ))}

      {head.styles.map((s) => (
        <style {...s.props} dangerouslySetInnerHTML={s.style} key={s.key} />
      ))}
    </>
  );
});
============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
/**
 * The RouterHead component is placed inside of the document `<head>` element.
 */ export const RouterHead = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_RouterHead_component_DPA76mgIou0"), "RouterHead_component_DPA76mgIou0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAIA;;CAEC,GACD,OAAO,MAAM,2BAAa,+HAyBvB\"}")
============================= test.tsx_RouterHead_component_DPA76mgIou0.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@builder.io/qwik/jsx-runtime";
import { createElement as _createElement } from "@builder.io/qwik";
import { _fnSignal } from "@builder.io/qwik";
import { _jsxC } from "@builder.io/qwik";
import { _jsxQ } from "@builder.io/qwik";
import { _jsxS } from "@builder.io/qwik";
import { useDocumentHead } from "@khulnasoft.com/qwik-city";
import { useLocation } from "@khulnasoft.com/qwik-city";
export const RouterHead_component_DPA76mgIou0 = ()=>{
    const head = useDocumentHead();
    const loc = useLocation();
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("title", null, null, head.title, 1, null),
            /*#__PURE__*/ _jsxQ("link", null, {
                rel: "canonical",
                href: _fnSignal((p0)=>p0.href, [
                    loc
                ], "p0.href")
            }, null, 3, null),
            /*#__PURE__*/ _jsxQ("meta", null, {
                name: "viewport",
                content: "width=device-width, initial-scale=1.0"
            }, null, 3, null),
            /*#__PURE__*/ _jsxQ("link", null, {
                rel: "icon",
                type: "image/svg+xml",
                href: "/favicon.svg"
            }, null, 3, null),
            head.meta.map((m)=>/*#__PURE__*/ _jsxS("meta", {
                    ...m
                }, null, 0, "u6_0")),
            head.links.map((l)=>/*#__PURE__*/ _createElement("link", {
                    ...l,
                    key: l.key
                })),
            head.styles.map((s)=>/*#__PURE__*/ _createElement("style", {
                    ...s.props,
                    dangerouslySetInnerHTML: s.style,
                    key: s.key
                }))
        ]
    }, 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;gDAOqC;IACnC,MAAM,OAAO;IACb,MAAM,MAAM;IAEZ,qBACE;;0BACE,MAAC,qBAAO,KAAK,KAAK;0BAElB,MAAC;gBAAK,KAAI;gBAAY,IAAI,kBAAE,GAAI,IAAI;;;;0BACpC,MAAC;gBAAK,MAAK;gBAAW,SAAQ;;0BAC9B,MAAC;gBAAK,KAAI;gBAAO,MAAK;gBAAgB,MAAK;;YAE1C,KAAK,IAAI,CAAC,GAAG,CAAC,CAAC,kBACd,MAAC;oBAAM,GAAG,CAAC;;YAGZ,KAAK,KAAK,CAAC,GAAG,CAAC,CAAC,kBACf,eAAC;oBAAM,GAAG,CAAC;oBAAE,KAAK,EAAE,GAAG;;YAGxB,KAAK,MAAM,CAAC,GAAG,CAAC,CAAC,kBAChB,eAAC;oBAAO,GAAG,EAAE,KAAK;oBAAE,yBAAyB,EAAE,KAAK;oBAAE,KAAK,EAAE,GAAG;;;;AAIxE\"}")
/*
{
  "origin": "test.tsx",
  "name": "RouterHead_component_DPA76mgIou0",
  "entry": null,
  "displayName": "test.tsx_RouterHead_component",
  "hash": "DPA76mgIou0",
  "canonicalFilename": "test.tsx_RouterHead_component_DPA76mgIou0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    244,
    839
  ]
}
*/
== DIAGNOSTICS ==

[]
