packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_strip_client_code.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
snapshot_kind: text
---
==INPUT==


import { component$, useClientMount$, useStore, useTask$ } from '@khulnasoft.com/qwik';
import mongo from 'mongodb';
import redis from 'redis';
import threejs from 'threejs';
import { a } from './keep';
import { b } from '../keep2';
import { c } from '../../remove';

export const Parent = component$(() => {
    const state = useStore({
        text: ''
    });

    // Double count watch
    useClientMount$(async () => {
        state.text = await mongo.users();
        redis.set(state.text, a, b, c);
    });

    useTask$(() => {
        // Code
    });

    return (
        <div
            shouldRemove$={() => state.text}
            onClick$={() => console.log('parent', state, threejs)}
        >
            <Div
                onClick$={() => console.log('keep')}
                render$={() => state.text}
            />
            {state.text}
        </div>
    );
});

============================= components/component.js ==

import "./keep";
import "../keep2";
import { componentQrl } from "@khulnasoft.com/qwik";
import { useClientMountQrl } from "@khulnasoft.com/qwik";
import { _noopQrl } from "@khulnasoft.com/qwik";
import { useTaskQrl } from "@khulnasoft.com/qwik";
import { inlinedQrl } from "@khulnasoft.com/qwik";
import { _fnSignal } from "@khulnasoft.com/qwik";
import { _IMMUTABLE } from "@khulnasoft.com/qwik";
import { useLexicalScope } from "@khulnasoft.com/qwik";
import { _jsxC } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
import { useStore } from '@khulnasoft.com/qwik';
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useClientMountQrl(/*#__PURE__*/ _noopQrl("Parent_component_useClientMount_Yn2kIDABoYw", [
        state
    ]));
    useTaskQrl(/*#__PURE__*/ inlinedQrl(()=>{
    // Code
    }, "Parent_component_useTask_ngmvcygWux8"));
    return /*#__PURE__*/ _jsxQ("div", null, {
        shouldRemove$: /*#__PURE__*/ _noopQrl("Parent_component_div_shouldRemove_EBj69wTX1do", [
            state
        ]),
        onClick$: /*#__PURE__*/ _noopQrl("Parent_component_div_onClick_0PioS4FByUg", [
            state
        ])
    }, [
        /*#__PURE__*/ _jsxC(Div, {
            onClick$: /*#__PURE__*/ inlinedQrl(()=>console.log('keep'), "Parent_component_div_Div_onClick_kgowuto5dR0"),
            render$: /*#__PURE__*/ inlinedQrl(()=>{
                const [state] = useLexicalScope();
                return state.text;
            }, "Parent_component_div_Div_render_CkMybN6xzQk", [
                state
            ]),
            [_IMMUTABLE]: {
                onClick$: _IMMUTABLE,
                render$: _IMMUTABLE
            }
        }, 3, "7R_0"),
        _fnSignal((p0)=>p0.text, [
            state
        ], "p0.text")
    ], 1, "7R_1");
}, "Parent_component_t6Wy3C0Q0XM"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/components/component.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;;AACA,SAAsC,QAAQ,QAAkB,uBAAuB;AAQvF,OAAO,MAAM,uBAAS,sCAAW;IAC7B,MAAM,QAAQ,SAAS;QACnB,MAAM;IACV;IAEA,qBAAqB;IACrB;;;IAKA,oCAAS;IACL,OAAO;IACX;IAEA,qBACI,MAAC;QACG,aAAa;;;QACb,QAAQ;;;;sBAER,MAAC;YACG,QAAQ,2BAAE,IAAM,QAAQ,GAAG,CAAC;YAC5B,OAAO,2BAAE;;uBAAM,MAAM,IAAI;;;;;gBADzB,QAAQ;gBACR,OAAO;;;wBAEV,GAAM,IAAI;;;;AAGvB,oCAAG\"}")
== DIAGNOSTICS ==

[]
