packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_transpile_jsx_only.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
snapshot_kind: text
---
==INPUT==


import { component$, useStore } from '@khulnasoft.com/qwik';

export const App = component$((props) => {
    return (
        <Cmp>
            <p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
        </Cmp>
    );
});

============================= test.tsx_App_component_ckEPmXZlub0.ts (ENTRY POINT)==

import { _jsxC } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const App_component_ckEPmXZlub0 = (props)=>{
    return /*#__PURE__*/ _jsxC(Cmp, {
        children: /*#__PURE__*/ _jsxQ("p", null, {
            class: "stuff",
            onClick$: /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_Cmp_p_onClick_vuXzfUTkpto.ts"), "App_component_Cmp_p_onClick_vuXzfUTkpto")
        }, "Hello Qwik", 3, null)
    }, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAG8B,CAAC;IAC3B,qBACI,MAAC;kBACG,cAAA,MAAC;YAAE,OAAM;YAAQ,QAAQ;WAA6B;;AAGlE\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    94,
    238
  ]
}
*/
============================= test.tsx_App_component_Cmp_p_onClick_vuXzfUTkpto.ts (ENTRY POINT)==

export const App_component_Cmp_p_onClick_vuXzfUTkpto = ()=>console.log('warn');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAMuC,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_p_onClick_vuXzfUTkpto",
  "entry": null,
  "displayName": "test.tsx_App_component_Cmp_p_onClick",
  "hash": "vuXzfUTkpto",
  "canonicalFilename": "test.tsx_App_component_Cmp_p_onClick_vuXzfUTkpto",
  "path": "",
  "extension": "ts",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    173,
    198
  ]
}
*/
============================= test.ts ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0.ts"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,oHAMhB\"}")
== DIAGNOSTICS ==

[]
