packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_use_client_effect.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1368
expression: output
---
==INPUT==


import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from '@khulnasoft.com/qwik';

export const Child = component$(() => {
    const state = useStore({
        count: 0
    });

    // Double count watch
    useBrowserVisibleTask$(() => {
        const timer = setInterval(() => {
        state.count++;
        }, 1000);
        return () => {
        clearInterval(timer);
        }
    });

    return (
        <div>
        {state.count}
    </div>
    );
});


============================= test.tsx_Child_component_useBrowserVisibleTask_0IGFPOyJmQA.js (ENTRY POINT)==

import { useLexicalScope } from "@khulnasoft.com/qwik";
export const Child_component_useBrowserVisibleTask_0IGFPOyJmQA = ()=>{
    const [state] = useLexicalScope();
    const timer = setInterval(()=>{
        state.count++;
    }, 1000);
    return ()=>{
        clearInterval(timer);
    };
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";iEAS2B;;IACnB,MAAM,QAAQ,YAAY;QAC1B,MAAM,KAAK;IACX,GAAG;IACH,OAAO;QACP,cAAc;IACd\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useBrowserVisibleTask_0IGFPOyJmQA",
  "entry": null,
  "displayName": "test.tsx_Child_component_useBrowserVisibleTask",
  "hash": "0IGFPOyJmQA",
  "canonicalFilename": "test.tsx_Child_component_useBrowserVisibleTask_0IGFPOyJmQA",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "function",
  "ctxName": "useBrowserVisibleTask$",
  "captures": true,
  "loc": [
    244,
    403
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_9GyF01GDKqw"), "Child_component_9GyF01GDKqw"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,sBAAQ,qHAoBlB\"}")
============================= test.tsx_Child_component_9GyF01GDKqw.js (ENTRY POINT)==

import { _fnSignal } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
import { useBrowserVisibleTaskQrl } from "@khulnasoft.com/qwik";
import { useStore } from "@khulnasoft.com/qwik";
export const Child_component_9GyF01GDKqw = ()=>{
    const state = useStore({
        count: 0
    });
    // Double count watch
    useBrowserVisibleTaskQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_useBrowserVisibleTask_0IGFPOyJmQA"), "Child_component_useBrowserVisibleTask_0IGFPOyJmQA", [
        state
    ]));
    return /*#__PURE__*/ _jsxQ("div", null, null, _fnSignal((p0)=>p0.count, [
        state
    ], "p0.count"), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;2CAGgC;IAC5B,MAAM,QAAQ,SAAS;QACnB,OAAO;IACX;IAEA,qBAAqB;IACrB;;;IASA,qBACI,MAAC,mCACA,GAAM,KAAK;;;AAGpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": null,
  "displayName": "test.tsx_Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "test.tsx_Child_component_9GyF01GDKqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    128,
    475
  ]
}
*/
== DIAGNOSTICS ==

[]
