packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_use_optimization.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 567
expression: output
---
==INPUT==


import { $, component$, useTask$ } from '@khulnasoft.com/qwik';
import { CONST } from 'const';
export const Works = component$((props) => {
    const {countNested} = useStore({value:{count:0}}).value;
    const countNested2 = countNested;
    const {hello} = countNested2;
    const bye = hello.bye;
    const {ciao} = bye.italian;


    return (
        <div ciao={ciao} >{foo}</div>
    );
});

============================= test.jsx ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { inlinedQrl } from "@khulnasoft.com/qwik";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    const store = useStore({
        value: {
            count: 0
        }
    });
    return <div ciao={store.value.countNested.hello.bye.italian.ciao}>{foo}</div>;
}, "Works_component_t45qL4vNGv0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,sBAAQ,sCAAW,CAAC;IAC7B,MAAM,QAAgB,SAAS;QAAC,OAAM;YAAC,OAAM;QAAC;IAAC;IAO/C,QACK,IAAI,MAJM,AADH,MAHsC,MAA3C,YAEA,MACW,GAAG,CACF,OAAO,CAAnB,OAIgB,MAAM;AAEjC,mCAAG\"}")
== DIAGNOSTICS ==

[]
