packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_use_server_mount.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
snapshot_kind: text
---
==INPUT==


import { component$, useTask$, useStore, useStyles$ } from '@khulnasoft.com/qwik';
import mongo from 'mongodb';
import redis from 'redis';

export const Parent = component$(() => {
    const state = useStore({
        text: ''
    });

    // Double count watch
    useTask$(async () => {
        state.text = await mongo.users();
        redis.set(state.text);
    });

    return (
        <div onClick$={() => console.log('parent')}>
            {state.text}
        </div>
    );
});

export const Child = component$(() => {
    const state = useStore({
        text: ''
    });

    // Double count watch
    useTask$(async () => {
        state.text = await mongo.users();
    });

    return (
        <div onClick$={() => console.log('child')}>
            {state.text}
        </div>
    );
});

============================= test.tsx_Parent_component_useTask_gDH1EtUWqBU.js ==

import { useLexicalScope } from "@khulnasoft.com/qwik";
import mongo from "mongodb";
import redis from "redis";
export const Parent_component_useTask_gDH1EtUWqBU = async ()=>{
    const [state] = useLexicalScope();
    state.text = await mongo.users();
    redis.set(state.text);
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;oDAWa;;IACL,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK;IAC9B,MAAM,GAAG,CAAC,MAAM,IAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_useTask_gDH1EtUWqBU",
  "entry": "test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "gDH1EtUWqBU",
  "canonicalFilename": "test.tsx_Parent_component_useTask_gDH1EtUWqBU",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    277,
    369
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_0TaiDayHrlo"), "Parent_component_0TaiDayHrlo"));
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_9GyF01GDKqw"), "Child_component_9GyF01GDKqw"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAKA,OAAO,MAAM,uBAAS,uHAgBnB;AAEH,OAAO,MAAM,sBAAQ,qHAelB\"}")
============================= test.tsx_Child_component_useTask_Oh4n7ZeqJkU.js ==

import { useLexicalScope } from "@khulnasoft.com/qwik";
import mongo from "mongodb";
export const Child_component_useTask_Oh4n7ZeqJkU = async ()=>{
    const [state] = useLexicalScope();
    state.text = await mongo.users();
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;mDA6Ba;;IACL,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useTask_Oh4n7ZeqJkU",
  "entry": "test.tsx_entry_Child",
  "displayName": "test.tsx_Child_component_useTask",
  "hash": "Oh4n7ZeqJkU",
  "canonicalFilename": "test.tsx_Child_component_useTask_Oh4n7ZeqJkU",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    625,
    686
  ]
}
*/
============================= test.tsx_Parent_component_0TaiDayHrlo.js ==

import { _fnSignal } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
import { useStore } from "@khulnasoft.com/qwik";
import { useTaskQrl } from "@khulnasoft.com/qwik";
export const Parent_component_0TaiDayHrlo = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useTaskQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_useTask_gDH1EtUWqBU"), "Parent_component_useTask_gDH1EtUWqBU", [
        state
    ]));
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_div_onClick_C5XE49Nqd3A"), "Parent_component_div_onClick_C5XE49Nqd3A")
    }, _fnSignal((p0)=>p0.text, [
        state
    ], "p0.text"), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;4CAKiC;IAC7B,MAAM,QAAQ,SAAS;QACnB,MAAM;IACV;IAEA,qBAAqB;IACrB;;;IAKA,qBACI,MAAC;QAAI,QAAQ;uBACR,GAAM,IAAI;;;AAGvB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_0TaiDayHrlo",
  "entry": "test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "test.tsx_Parent_component_0TaiDayHrlo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    175,
    487
  ]
}
*/
============================= test.tsx_Parent_component_div_onClick_C5XE49Nqd3A.js (ENTRY POINT)==

export const Parent_component_div_onClick_C5XE49Nqd3A = ()=>console.log('parent');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"wDAiBuB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_onClick_C5XE49Nqd3A",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_onClick",
  "hash": "C5XE49Nqd3A",
  "canonicalFilename": "test.tsx_Parent_component_div_onClick_C5XE49Nqd3A",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    409,
    436
  ]
}
*/
============================= test.tsx_Child_component_9GyF01GDKqw.js ==

import { _fnSignal } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
import { useStore } from "@khulnasoft.com/qwik";
import { useTaskQrl } from "@khulnasoft.com/qwik";
export const Child_component_9GyF01GDKqw = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useTaskQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_useTask_Oh4n7ZeqJkU"), "Child_component_useTask_Oh4n7ZeqJkU", [
        state
    ]));
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_div_onClick_elliVSnAiOQ"), "Child_component_div_onClick_elliVSnAiOQ")
    }, _fnSignal((p0)=>p0.text, [
        state
    ], "p0.text"), 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;2CAuBgC;IAC5B,MAAM,QAAQ,SAAS;QACnB,MAAM;IACV;IAEA,qBAAqB;IACrB;;;IAIA,qBACI,MAAC;QAAI,QAAQ;uBACR,GAAM,IAAI;;;AAGvB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": "test.tsx_entry_Child",
  "displayName": "test.tsx_Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "test.tsx_Child_component_9GyF01GDKqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    523,
    803
  ]
}
*/
============================= test.tsx_Child_component_div_onClick_elliVSnAiOQ.js (ENTRY POINT)==

export const Child_component_div_onClick_elliVSnAiOQ = ()=>console.log('child');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAkCuB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_div_onClick_elliVSnAiOQ",
  "entry": null,
  "displayName": "test.tsx_Child_component_div_onClick",
  "hash": "elliVSnAiOQ",
  "canonicalFilename": "test.tsx_Child_component_div_onClick_elliVSnAiOQ",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    726,
    752
  ]
}
*/
== DIAGNOSTICS ==

[]
